Default debug to false and improve readme

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,6 @@
-APP_KEY=base64:+P0btrH9HgS2TzvxV5ocQj4VbdF4WBby9lgvjVACA0E=
+APP_DEBUG=false
+
+APP_KEY=
 TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 TWILIO_AUTH_TOKEN=aXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 TWILIO_NUMBER=+1707XXXXXXX
